Fix page-content and page-main overflow

--- a/css/grid/page.css
+++ b/css/grid/page.css
@@ -74,7 +74,7 @@ Modifiers:
 .page-content--scroll,
 .page-main--scroll {
   height: 100vh;
-  overflow-y: auto;
+  overflow: auto;
 }
 
 .page-content-main {
